--- a/material.html
+++ b/material.html
@@ -102,6 +102,8 @@
     <!-- /.container -->
 </nav>
 
+<!--
+
 <section id="general" class="content-section text-center">
     <div class="container">
         <div class="row">
@@ -123,7 +125,7 @@
         </div>
     </div>
 </section>
-
+-->
 
 <section id="chooser" class="content-section text-center">
     <div class="container">
@@ -259,23 +261,6 @@
 
                 <h2>Python</h2>
 
-                <p>
-                    <a href="http://python.org">Python</a> ist eine modere Programmiersprache, die gleichzeitig sehr
-                    vielseitig ist und eine einfache Syntax hat. Aus diesem Grund empfehlen wir Python, genauer Python
-                    3, als Einsteigersprache in unserem
-                    CoderDojo.
-                </p>
-
-                <h3>Installation</h3>
-
-                <p>
-                    <a href="http://python.org">Python</a> kann direkt von der Webseite heruntergeladen und installiert
-                    werden. Eine Installationsanleitung für Windows von uns kann <a
-                        href="https://raw.githubusercontent.com/coderdojoka/Materialien/master/Installation/installation_python.pdf">hier</a>
-                    gefunden werden. Bei der Installation ist es wichtig darauf zu achten, dass Python zum
-                    Windows-Systempfad hinzugefügt wird (dies wird auch in der Anleitung beschrieben), da dies die Dinge
-                    später erleichert.
-                </p>
 
                 <h3>Nützliche Links</h3>
 
@@ -308,7 +293,7 @@
                 <ul class="nav nav-tabs">
                     <li class="active"><a data-toggle="tab" href="#basics">Grundlagen</a></li>
                     <li><a data-toggle="tab" href="#progress">Fortschritte</a></li>
-                    <li><a data-toggle="tab" href="#py2cd">Spiele/Zeichnen</a></li>
+                    <li><a data-toggle="tab" href="#py2cd">py2cd - Zeichnen</a></li>
 
                     <!--
                     <li><a data-toggle="tab" href="#purple">Klassen und OOP</a></li>
