--- a/index.html
+++ b/index.html
@@ -542,6 +542,48 @@
 <!-- Custom Theme JavaScript -->
 <script src="js/coderdojoka.js"></script>
 
+
+<!-- Maps -->
+<script>
+
+    // Google Maps Scripts
+    // When the window has finished loading create our google map below
+    google.maps.event.addDomListener(window, 'load', init);
+
+    function init() {
+        // Basic options for a simple Google Map
+        // For more options see: https://developers.google.com/maps/documentation/javascript/reference#MapOptions
+        var mapOptions = {
+            // How zoomed in you want the map to start at (always required)
+            zoom: 15,
+
+            // The latitude and longitude to center the map (always required)
+            center: new google.maps.LatLng(49.0138084, 8.419531), // SR131 KIT
+
+            // Disables the default Google Maps UI components
+            disableDefaultUI: true,
+            scrollwheel: false,
+            draggable: false
+        };
+
+        // Get the HTML DOM element that will contain your map
+        // We are using a div with id="map" seen below in the <body>
+        var mapElement = document.getElementById('map');
+
+        // Create the Google Map using out element and options defined above
+        var map = new google.maps.Map(mapElement, mapOptions);
+
+        // Custom Map Marker Icon - Customize the map-marker.png file to customize your icon
+        var image = 'img/map-marker.png';
+        var myLatLng = new google.maps.LatLng(49.0138084, 8.419531);
+        var beachMarker = new google.maps.Marker({
+            position: myLatLng,
+            map: map
+        });
+    }
+
+</script>
+
 <!-- Init Lightbox -->
 <script>
     lightbox.option({
