Raetsel wurden nicht geladen. Pfad angepasst

--- a/archiv.html
+++ b/archiv.html
@@ -169,7 +169,7 @@
     window.onload = function () {
 
         var $container = $('#puzzle_view');
-        var url = "raetsel/";
+        var url = "https://raw.githubusercontent.com/coderdojoka/coderdojoka.github.io/master/raetsel/";
 
         $('#old_puzzles').find('li').each(function () {
             var _this = $(this);
