--- a/raetsel.html
+++ b/raetsel.html
@@ -196,8 +196,9 @@
 <!-- Aktuelles Rätsel laden -->
 <script>
     var url = "https://raw.githubusercontent.com/coderdojoka/coderdojoka.github.io/master/raetsel/";
+    var riddle = "wer_wars.md";
     window.onload = function () {
-        MarkdownLoader.load_md('#puzzle', url + "wer_wars.md");
+        MarkdownLoader.load_md('#puzzle', url + riddle);
     }
 
 </script>
