--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                             <div class="triangle_right"></div>
                         </div>
                     </td>
-                    <td>18. Dezember</td>
+                    <td>15. Januar</td>
                 </tr>
                 <tr>
                     <td>
@@ -229,8 +229,8 @@
                     <div class="row timeline-movement">
                         <a class="page-scroll" href="#join">
                             <div class="timeline-badge">
-                                <span class="timeline-balloon-date-day">20</span>
-                                <span class="timeline-balloon-date-month">NOV</span>
+                                <span class="timeline-balloon-date-day">04</span>
+                                <span class="timeline-balloon-date-month">DEZ</span>
                             </div>
                         </a>
 
@@ -247,7 +247,7 @@
                     <div class="row timeline-movement">
                         <a class="page-scroll" href="#join">
                             <div class="timeline-badge">
-                                <span class="timeline-balloon-date-day">04</span>
+                                <span class="timeline-balloon-date-day">18</span>
                                 <span class="timeline-balloon-date-month">DEZ</span>
                             </div>
                         </a>
@@ -270,23 +270,6 @@
                     <div class="row timeline-movement">
                         <a class="page-scroll" href="#join">
                             <div class="timeline-badge">
-                                <span class="timeline-balloon-date-day">18</span>
-                                <span class="timeline-balloon-date-month">DEZ</span>
-                            </div>
-                        </a>
-
-                        <div class="col-sm-6 timeline-item timeline-item-first"><span class="question">Wo?</span><a
-                                href="#map"
-                                class="page-scroll">Seminarraum
-                            236</a></div>
-                        <div class="col-sm-6 timeline-item timeline-item-last"><span class="question">Wann?</span>17:00
-                            - 19:00
-                        </div>
-                    </div>
-
-                    <div class="row timeline-movement">
-                        <a class="page-scroll" href="#join">
-                            <div class="timeline-badge">
                                 <span class="timeline-balloon-date-day">15</span>
                                 <span class="timeline-balloon-date-month">JAN</span>
                             </div>
@@ -300,7 +283,7 @@
                             - 19:00
                         </div>
                     </div>
-                    
+
                     <div class="row timeline-movement">
                         <a class="page-scroll" href="#join">
                             <div class="timeline-badge">
