--- a/archiv.html
+++ b/archiv.html
@@ -116,6 +116,8 @@
 
                 <h2>Alte Rätsel</h2>
                 <ul id="old_puzzles">
+                    <li data-md="baum.md" title="4 Farben"><a href="#old_puzzles">4 Farben</a> (04.12.2015)
+
                     <li data-md="wer_wars.md" title="Wer wars?"><a href="#old_puzzles">Wer wars?</a> (04.12.2015)
                     </li>
                     <li data-md="zeichen_code.md" title="Text entschlüsseln"><a href="#old_puzzles">Text
