IT4Kids Logo u. neue Sektion hinzugefügt
ist aber noch nicht responsive... kann das jmd machen?

--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
 <div id="map">
 </div>
 
-<!-- Sponsor Section -->
+<!-- Sponsor Section & Cooperators -->
 <section id="sponsor" class="content-section text-center">
     <div class="container">
         <div class="row">
@@ -477,7 +477,14 @@
             <div class="col-lg-4">
                 <a href="https://www.inovex.de/"><img src="img/inovex.png" alt="Inovex" style="height: 150px;"></a>
             </div>
-        </div>
+			
+			<br />
+			
+			<h2>Kooperationspartner</h2>
+			<div class="col-lg-4 col-lg-offset-3">
+                <a href="http://www.it-for-kids.org/"><img src="img/IT4KidsLogo2.png" alt="IT4Kids" style="height: 150px;"></a>
+			</div>
+		</div>
     </div>
 </section>
 
