--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                 <p>Programmieren zu können ist eine Fähigkeit, die heutzutage immer wichtiger wird. Wie bei vielen
                     Fähigkeiten gilt auch hier: je früher mit dem Erlernen begonnen wird, desto besser. Leider ist das
                     Programmieren noch kein fester Bestandteil im Schulalltag der Kinder. Dadurch entstand unsere
-                    Vision, ein CoderDojo in Karlsruhe einzurichten, um interessierten Kindern die Möglichkeit zu geben,
+                    Vision, ein CoderDojo in Karlsruhe einzurichten, um interessierten Kindern die Möglichkeit zu bieten,
                     programmieren zu lernen und sie in diesem Bereich zu fördern. </p>
                 <a href="img/codo/bild_1.jpg" data-lightbox="codo-bilder"
                    data-title="Mit zweiter Tastatur gehts besser!">
@@ -202,7 +202,7 @@
                 <p>Unsere Treffen finden alle zwei Wochen statt. Die teilnehmenden Kinder und Jugendlichen werden
                     hierbei von Studenten und Mentoren aus technischen Bereichen betreut, während sie programmieren und
                     unter kompetenter Anleitung ihre Fähigkeiten entwickeln und ausbauen. Alle in diesem Projekt
-                    mitwirkenden Mentoren engagieren sich ehrenamtlich und so sind die Treffen auch für alle Kinder
+                    mitwirkenden Mentoren engagieren sich ehrenamtlich und so sind die Treffen für alle Kinder
                     kostenlos.</p>
             </div>
         </div>
@@ -321,7 +321,7 @@
 
                 <p>Am einfachsten lässt sich das herausfinden, indem Sie das mit Ihrem Kind einfach mal ausprobieren!
                     Wir
-                    erheben keine Teilnehmergebühr, und wenn Ihr Kind Spaß bei uns hat,
+                    erheben keine Teilnehmergebühr und wenn Ihr Kind Spaß bei uns hat,
                     dann freuen wir uns, es wieder bei uns zu begrüßen!</p>
 
                 <h2>Für welche Altersgruppe ist CoderDojo geeignet?</h2>
@@ -332,14 +332,12 @@
 
                 <h2>Kann mein Kind jederzeit dazu kommen, oder muss ich bis zum nächsten Durchgang warten?</h2>
 
-                <p>Bei uns kann man bei jedem Treffen einsteigen. Wir versuchen jedes Mal etwas für Anfänger als auch
-                    für
-                    Fortgeschrittene anzubieten.
+                <p>Der Einstieg ist jederzeit möglich. Wir bieten immer Materialien für Anfänger und Fortgeschrittene an.
                 </p>
 
                 <h2>Muss mein Kind schon programmieren können?</h2>
 
-                <p>Nein. Gerade das soll Ihr Kind ja bei uns lernen können! Wir wollen ein Umfeld bieten, in dem
+                <p>Nein. Gerade das soll Ihr Kind ja bei uns lernen! Wir wollen ein Umfeld bieten, in dem
                     interessierte Kinder und Jugendliche gemeinsam etwas ausprobieren. Wir, die Mentoren, helfen weiter,
                     wenn es zu knifflig wird. Falls Ihr Kind schon programmieren kann, begleiten wir gerne die Schritte
                     zu
@@ -347,33 +345,32 @@
 
                 <h2>Was muss mein Kind sonst können?</h2>
 
-                <p>Es ist einfacher, wenn Ihr Kind schon mal Computer bedient hat – aber auch das können wir schnell
+                <p>Es ist einfacher, wenn Ihr Kind schon mal einen Computer bedient hat – aber auch das können wir schnell
                     nachholen.</p>
 
                 <h2>Was muss mein Kind mitbringen?</h2>
 
-                <p>Es wäre super wenn Ihr Kind einen Laptop mitbringen könnte. Wenn das nicht möglich ist, sagen Sie uns
+                <p>Es wäre super, wenn Ihr Kind einen Laptop mitbringen könnte. Wenn das nicht möglich ist, sagen Sie uns
                     bitte bei der Anmeldung unbedingt Bescheid – wir versuchen dann ein Laptop zur Verfügung zu
                     stellen.</p>
 
                 <h2>Was für eine Art Laptop braucht mein Kind?</h2>
 
-                <p>Jedes Laptop mit einem Betriebssystem wie Windows, Mac OS oder Linux ist ausreichend. Das Laptop muss
-                    nicht neu oder besonders schnell sein. iPads, Android-Tablets oder Smartphones sind allerdings nicht
+                <p> Das Laptop muss nicht neu oder besonders schnell sein. Smartphones, Android-Tablets oder iPads sind allerdings nicht
                     zum
                     Programmieren geeignet.</p>
 
-                <h2>Ich kenne mich mit Computern nicht aus, kann ich trotzdem helfen?</h2>
+                <h2>Ich kenne mich mit Computern nicht aus. Kann ich trotzdem helfen?</h2>
 
                 <p>Sehr gerne! Es gibt viele Dinge an einem Dojo, die nichts mit Computern zu tun haben. Je mehr Eltern
-                    mitmachen, desto mehr Zeit haben die Mentoren zum Helfen.</p>
+                    mitmachen, desto mehr Zeit haben die Mentoren zu helfen.</p>
 
                 <h2>Was wird unterrichtet? Gibt es einen Plan?</h2>
 
-                <p>Wir haben einige spannende Projekte, die wir vorschlagen können. Allerdings richten wir uns da ganz
+                <p>Wir haben einige spannende Projekte, die wir vorschlagen können. Allerdings richten wir uns ganz
                     nach
                     den Kindern, sind offen für ihre Vorschläge und möchten wissen, was sie schon immer mal am Computer
-                    selbst ausprobieren wollten. Unsere Mentoren haben selbst ganz unterschiedliche Schwerpunkte und so
+                    selbst ausprobieren wollten. Unsere Mentoren haben ganz unterschiedliche Schwerpunkte und so
                     können wir viele verschiedene Projekte begleiten.</p>
             </div>
         </div>
@@ -397,7 +394,7 @@
                     per Mail unter
                     <a href="mailto:coderdojo.karlsruhe@gmail.com">coderdojo.karlsruhe@gmail.com</a> anmelden. Wenn ihr
                     das erste Mal kommt, ist es
-                    auch gut für uns vorher zu wissen, wie alt ihr seit und was für Vorkentnisse ihr mitbringt.</p>
+                    auch gut für uns vorher zu wissen, wie alt ihr seid und was für Vorkentnisse ihr mitbringt.</p>
 
                 <p>Vor allem jüngere Kinder (bis ca. 12 Jahre) müssen von ihren Eltern zu diesen Treffen begleitet
                     werden.
@@ -407,14 +404,14 @@
                     Ausnahmefällen
                     eine Lösung gefunden werden, sofern wir schon in der Anmeldungsmail Bescheid bekommen.</p>
 
-                <p>Außerdem sollten bei der ersten Teilnahme die <a
+                <p>Außerdem müssen bei der ersten Teilnahme die <a
                         href="Teilnahmebedingungen.pdf">Teilnahmebedingungen</a>
                     ausgedruckt, ausgefüllt und unterschrieben mitgebracht werden.</p>
                 <br>
 
                 <h2>Wie werde ich Mentor?</h2>
 
-                <p>Wir sind noch auf der Suche nach weiteren Mentoren. Falls ihr Interesse habt als Mentor beim
+                <p>Wir sind auf der Suche nach weiteren Mentoren. Falls ihr Interesse habt als Mentor beim
                     CoderDojo Karlsruhe mitzumachen,
                     schreibt uns einfach eine <a href="mailto:coderdojo.karlsruhe@gmail.com">Mail</a>.</p>
 
@@ -442,7 +439,7 @@
                 </p>
 
                 <p>
-                    Beim Fragen und Anregungen wenden Sie sich einfach per Mail an:
+                    Bei Fragen und Anregungen wenden Sie sich einfach per Mail an:
                     <a href="mailto:coderdojo.karlsruhe@gmail.com">coderdojo.karlsruhe@gmail.com</a></p>
 
                 <br>
