--- a/raetsel.html
+++ b/raetsel.html
@@ -104,40 +104,34 @@
                 <img src="img/ninjas.png">
 
                 <p>
-                    Dir ist die Lücke zwischen 2 CoderDojo Treffen zu groß? Dann bist du hier richtig. Auf
+                    Dir ist die Lücke zwischen zwei CoderDojo-Treffen zu groß? Dann bist du hier genau richtig! Auf
                     dieser Seite
-                    stellen wir nach jeden Treffen ein neues <a href="#puzzle"
+                    laden wir nach jedem Dojo ein neues <a href="#puzzle"
                                                                 class="page-scroll">Rätsel</a> hoch, das
                     du in Ruhe von
                     daheim aus bearbeiten
-                    kannst,
-                    um die Zeit bis zum nächsten Treffen zu überbrücken.
+                    kannst.
                 </p>
 
-                <h3>Wie funktionierts?</h3>
+                <h3>Wie funktioniert's?</h3>
 
                 <p>
-                    Jeder CoderDojo-Teilnehmer kann die Aufgaben bearbeiten und uns die Lösungen per Mail
-                    schicken
-                    oder beim nächsten Dojo mitbringen. In regelmäßigen Abständen werden wir
-                    die besten Lösungen vorstellen und man kann sogar einen kleinen Preis gewinnen :)
-                </p>
-
-                <p>
-                    Es geht hier nicht darum die Aufgabe perfekt zu lösen, sondern du sollst dir selbst
-                    einen Lösungsweg überlegen. Du musst die Aufgabe nicht
-                    100% korrekt lösen, viel wichtiger ist, dass du versuchst sie zu lösen und dir Gedanken
-                    dazu gemacht
-                    hast.
-                    Als Lösung kannst du abgeben, was dir am Liebsten ist: Text, Bild, ein Scratch- oder
-                    Pythonprogramm,
-                    etc...
+                    Lies dir das Rätsel aufmerksam durch und versuche eine Lösung zu finden. Diese kannst du uns entweder
+                    per E-Mail schicken oder zum nächsten Treffen mitbringen. Die Form der Lösung bleibt dir überlassen.
+                    Abhängig vom Problem könnte das zum Beispiel ein Bild, Text oder ein Programm sein. In regelmäßigen 
+                    Abständen werden wir die kreativsten Vorschläge vorstellen und du hast sogar die Möglichkeit 
+                    einen kleinen Preis zu gewinnen.
                 </p>
 
                 <p>
-                    Die Aufgaben sind so gestellet, dass alle Teilnehmer diese lösen können.
-                    Anderenfalls gibt es mehrere Teilaufgaben/Schwierigkeitsgrade, die ihr euch aussuchen
-                    könnt.
+                    Keine Sorge, falls du einmal nicht die perfekte Lösung finden solltest! Darum geht es hier gar nicht.
+                    Wichtig ist, dass du dir Gedanken gemacht hast und kreativ warst. Natürlich dürft ihr auch gerne 
+                    zusammenarbeiten, um ein besonders kniffliges Rätsel gemeinsam zu knacken.
+                </p>
+
+                <p>
+                    Die Aufgaben sind so gestellt, dass alle Teilnehmer diese lösen können.
+                    Ansonsten gibt es mehrere Teilaufgaben/Schwierigkeitsgrade, die ihr frei wählen könnt.
                 </p>
 
 
@@ -154,8 +148,7 @@
 
                 <p>
                     Alle bisherigen Rätsel kannst du im <a href="archiv.html">Archiv</a> finden. Du kannst
-                    diese, wenn
-                    du Lust hast, auch noch nachträglich lösen.
+                    diese auch noch nachträglich lösen oder im Dojo Fragen dazu stellen.
                 </p>
 
 
