Neues Rätsel online

--- a/raetsel.html
+++ b/raetsel.html
@@ -189,7 +189,7 @@
 <!-- Aktuelles Rätsel laden -->
 <script>
     var url = "https://raw.githubusercontent.com/coderdojoka/coderdojoka.github.io/master/raetsel/";
-    var riddle = "baum.md";
+    var riddle = "2016.md";
     window.onload = function () {
         MarkdownLoader.load_md('#puzzle', url + riddle);
     }
