--- a/archiv.html
+++ b/archiv.html
@@ -116,16 +116,11 @@
 
                 <h2>Alte Rätsel</h2>
                 <ul id="old_puzzles">
-                    <li data-md="baum.md" title="4 Farben"><a href="#old_puzzles">4 Farben</a> (04.12.2015)
-
-                    <li data-md="wer_wars.md" title="Wer wars?"><a href="#old_puzzles">Wer wars?</a> (04.12.2015)
-                    </li>
-                    <li data-md="zeichen_code.md" title="Text entschlüsseln"><a href="#old_puzzles">Text
-                        verschlüsseln</a> (20.11.2015)
-                    </li>
-                    <li data-md="hindernisse.md" title="Roboter im Labyrinth"><a
-                            href="#old_puzzles">Roboter-Labyrinth</a> (4.11.2015)
-                    </li>
+                    <li data-md="2016.md" title="2016"><a href="#old_puzzles">2016</a> (15.01.2015)</li>
+                    <li data-md="baum.md" title="4 Farben"><a href="#old_puzzles">4 Farben</a> (04.12.2015)</li>
+                    <li data-md="wer_wars.md" title="Wer wars?"><a href="#old_puzzles">Wer wars?</a> (04.12.2015)</li>
+                    <li data-md="zeichen_code.md" title="Text entschlüsseln"><a href="#old_puzzles">Text verschlüsseln</a> (20.11.2015)</li>
+                    <li data-md="hindernisse.md" title="Roboter im Labyrinth"><a href="#old_puzzles">Roboter-Labyrinth</a> (4.11.2015)</li>
                 </ul>
 
                 <hr>
