--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                             <div class="triangle_right"></div>
                         </div>
                     </td>
-                    <td>26. Februar</td>
+                    <td>11. März</td>
                 </tr>
                 <tr>
                     <td>
@@ -216,7 +216,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Termine</h2>
 
-                <p>Das nächste Treffen findet am Freitag, dem 26.02.2016 von 17.00 Uhr bis 19:00 Uhr im Seminarraum 236
+                <p>Das nächste Treffen findet am Freitag, dem 11.03.2016 von 17.00 Uhr bis 19:00 Uhr im Seminarraum 236
                     der Fakultät für Informatik im Gebäude 50.34 am KIT statt.</p>
 
                 <p>Die unten aufgelisteten Termine finden alle im Gebäude 50.34 des KIT statt. Es gehört zur Fakultät
@@ -224,48 +224,6 @@
                     Informatik, die uns den Seminarraum für unsere Treffen zur Verfügung stellt.</p>
 
                 <div id="timeline">
-
-                    <div class="row timeline-movement">
-                        <a class="page-scroll" href="#join">
-                            <div class="timeline-badge">
-                                <span class="timeline-balloon-date-day">29</span>
-                                <span class="timeline-balloon-date-month">JAN</span>
-                            </div>
-                        </a>
-
-                        <div class="col-sm-6 timeline-item timeline-item-first"><span class="question">Wo?</span><a
-                                href="#map"
-                                class="page-scroll">Seminarraum
-                            236</a></div>
-                        <div class="col-sm-6 timeline-item timeline-item-last"><span class="question">Wann?</span>17:00
-                            - 19:00
-                        </div>
-                    </div>
-
-                    <div class="row timeline-movement">
-                        <a class="page-scroll" href="#join">
-                            <div class="timeline-badge">
-                                <span class="timeline-balloon-date-day">12</span>
-                                <span class="timeline-balloon-date-month">FEB</span>
-                            </div>
-                        </a>
-
-                        <div class="col-sm-6 timeline-item timeline-item-first"><span class="question">Wo?</span><a
-                                href="#map"
-                                class="page-scroll">Seminarraum
-                            236</a></div>
-                        <div class="col-sm-6 timeline-item timeline-item-last"><span class="question">Wann?</span>17:00
-                            - 19:00
-                        </div>
-                    </div>
-
-
-
-                    <div class="row timeline-movement">
-                        <div class="timeline-badge timeline-filter-movement">
-                            <span class="glyphicon glyphicon-time"></span>
-                        </div>
-                    </div>
 
                     <div class="row timeline-movement">
                         <a class="page-scroll" href="#join">
@@ -283,11 +241,34 @@
                             - 19:00
                         </div>
                     </div>
+					
+					<div class="row timeline-movement">
+                        <div class="timeline-badge timeline-filter-movement">
+                            <span class="glyphicon glyphicon-time"></span>
+                        </div>
+                    </div>
 
                     <div class="row timeline-movement">
                         <a class="page-scroll" href="#join">
                             <div class="timeline-badge">
                                 <span class="timeline-balloon-date-day">11</span>
+                                <span class="timeline-balloon-date-month">MAR</span>
+                            </div>
+                        </a>
+
+                        <div class="col-sm-6 timeline-item timeline-item-first"><span class="question">Wo?</span><a
+                                href="#map"
+                                class="page-scroll">Seminarraum
+                            236</a></div>
+                        <div class="col-sm-6 timeline-item timeline-item-last"><span class="question">Wann?</span>17:00
+                            - 19:00
+                        </div>
+                    </div>
+					
+					<div class="row timeline-movement">
+                        <a class="page-scroll" href="#join">
+                            <div class="timeline-badge">
+                                <span class="timeline-balloon-date-day">24</span>
                                 <span class="timeline-balloon-date-month">MAR</span>
                             </div>
                         </a>
