--- a/index.html
+++ b/index.html
@@ -140,8 +140,9 @@
                             <div class="triangle_right"></div>
                         </div>
                     </td>
-                    <td>24. März</td>
+                    <td><a href="#events" style="font-size: 1.2em">08. April</a></td>
                 </tr>
+                <!--
                 <tr>
                     <td>
                         <div class="triangle_box">
@@ -151,6 +152,7 @@
                     </td>
                     <td><a href="raetsel.html">Rätsel der Woche</a></td>
                 </tr>
+                -->
             </table>
 
             <div class="col-lg-8 col-lg-offset-2">
@@ -215,7 +217,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Termine</h2>
-                <p>Das nächste Treffen findet bereits am Donnerstag, dem 24.03.2016 von 17.00 Uhr bis 19:00 Uhr im
+                <p>Das nächste Treffen findet bereits am Freitag, dem 08.04.2016 von 17.00 Uhr bis 19:00 Uhr im
                     Seminarraum 236 der Fakultät für Informatik im Gebäude 50.34 am KIT statt.</p>
 
                 <p>Die unten aufgelisteten Termine finden alle im Gebäude 50.34 des KIT statt. Es gehört zur Fakultät
@@ -227,8 +229,8 @@
                     <div class="row timeline-movement">
                         <a class="page-scroll" href="#join">
                             <div class="timeline-badge">
-                                <span class="timeline-balloon-date-day">26</span>
-                                <span class="timeline-balloon-date-month">FEB</span>
+                                <span class="timeline-balloon-date-day">11</span>
+                                <span class="timeline-balloon-date-month">MÄR</span>
                             </div>
                         </a>
 
@@ -244,7 +246,7 @@
                     <div class="row timeline-movement">
                         <a class="page-scroll" href="#join">
                             <div class="timeline-badge">
-                                <span class="timeline-balloon-date-day">11</span>
+                                <span class="timeline-balloon-date-day">24</span>
                                 <span class="timeline-balloon-date-month">MÄR</span>
 
                             </div>
@@ -264,12 +266,12 @@
                             <span class="glyphicon glyphicon-time"></span>
                         </div>
                     </div>
-<!--
+
                     <div class="row timeline-movement">
                         <a class="page-scroll" href="#join">
                             <div class="timeline-badge">
-                                <span class="timeline-balloon-date-day">11</span>
-                                <span class="timeline-balloon-date-month">MAR</span>
+                                <span class="timeline-balloon-date-day">08</span>
+                                <span class="timeline-balloon-date-month">APR</span>
                             </div>
                         </a>
 
@@ -281,14 +283,14 @@
                             - 19:00
                         </div>
                     </div>
--->
+
 
 					
 					<div class="row timeline-movement">
                         <a class="page-scroll" href="#join">
                             <div class="timeline-badge">
-                                <span class="timeline-balloon-date-day">24</span>
-                                <span class="timeline-balloon-date-month">MAR</span>
+                                <span class="timeline-balloon-date-day">22</span>
+                                <span class="timeline-balloon-date-month">APR</span>
                             </div>
                         </a>
 
