--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                             <div class="triangle_right"></div>
                         </div>
                     </td>
-                    <td><a href="#events" style="font-size: 1.2em">08. April</a></td>
+                    <td><a href="#events" style="font-size: 1.2em">22. April</a></td>
                 </tr>
                 <!--
                 <tr>
@@ -217,7 +217,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Termine</h2>
-                <p>Das nächste Treffen findet bereits am Freitag, dem 08.04.2016 von 17.00 Uhr bis 19:00 Uhr im
+                <p>Das nächste Treffen findet am Freitag, dem 22.04.2016 von 17.00 Uhr bis 19:00 Uhr im
                     Seminarraum 236 der Fakultät für Informatik im Gebäude 50.34 am KIT statt.</p>
 
                 <p>Die unten aufgelisteten Termine finden alle im Gebäude 50.34 des KIT statt. Es gehört zur Fakultät
@@ -229,7 +229,7 @@
                     <div class="row timeline-movement">
                         <a class="page-scroll" href="#join">
                             <div class="timeline-badge">
-                                <span class="timeline-balloon-date-day">11</span>
+                                <span class="timeline-balloon-date-day">24</span>
                                 <span class="timeline-balloon-date-month">MÄR</span>
                             </div>
                         </a>
@@ -246,8 +246,8 @@
                     <div class="row timeline-movement">
                         <a class="page-scroll" href="#join">
                             <div class="timeline-badge">
-                                <span class="timeline-balloon-date-day">24</span>
-                                <span class="timeline-balloon-date-month">MÄR</span>
+                                <span class="timeline-balloon-date-day">08</span>
+                                <span class="timeline-balloon-date-month">APR</span>
 
                             </div>
                         </a>
@@ -270,7 +270,7 @@
                     <div class="row timeline-movement">
                         <a class="page-scroll" href="#join">
                             <div class="timeline-badge">
-                                <span class="timeline-balloon-date-day">08</span>
+                                <span class="timeline-balloon-date-day">22</span>
                                 <span class="timeline-balloon-date-month">APR</span>
                             </div>
                         </a>
@@ -289,8 +289,8 @@
 					<div class="row timeline-movement">
                         <a class="page-scroll" href="#join">
                             <div class="timeline-badge">
-                                <span class="timeline-balloon-date-day">22</span>
-                                <span class="timeline-balloon-date-month">APR</span>
+                                <span class="timeline-balloon-date-day">06</span>
+                                <span class="timeline-balloon-date-month">MAI</span>
                             </div>
                         </a>
 
@@ -480,8 +480,8 @@
 			<br />
 			
 			<h2>Kooperationspartner</h2>
-			<div class="col-lg-4 col-lg-offset-3">
-                <a href="http://www.it-for-kids.org/"><img src="img/IT4KidsLogo2.png" alt="IT4Kids" style="height: 150px;"></a>
+			<div class="col-lg-4 col-lg-offset-4">
+                <a href="http://www.it-for-kids.org/"><img src="img/IT4KidsLogo2.png" alt="IT4Kids" style="height: auto; max-height: 110px; max-width: 100%"></a>
 			</div>
 		</div>
     </div>
